--- a/templates/default/tilequeue-pip-requirements.txt.erb
+++ b/templates/default/tilequeue-pip-requirements.txt.erb
@@ -2,7 +2,7 @@ argparse==1.2.1
 boto==2.33.0
 git+https://github.com/mapzen/TileStache@integration-1#egg=TileStache
 ModestMaps==1.4.6
-PIL==1.1.7
+Pillow==2.6.1
 protobuf==2.6.0
 psycopg2==2.5.4
 PyYAML==3.11
