--- a/templates/default/tilequeue-logging.conf.erb
+++ b/templates/default/tilequeue-logging.conf.erb
@@ -47,5 +47,5 @@ formatter=simpleFormatter
 args=(sys.stdout,)
 
 [formatter_simpleFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+format=%(name)s - %(levelname)s - %(message)s
 datefmt=
