--- a/templates/default/sv-tilequeue-run.erb
+++ b/templates/default/sv-tilequeue-run.erb
@@ -1,6 +1,6 @@
 #!/bin/bash
 
 exec 2>&1
-exec chpst -u <%= node[:tilequeue][:tilestache][:user] %> \
+exec chpst -u <%= node[:tilequeue][:user][:user] %> \
     tilequeue process \
     --config <%= "#{node[:tilequeue][:cfg_path]}/#{node[:tilequeue][:cfg_file]}" %>
