adds configuration options for worker count and how many messages to pull off the sqs queueu at once

--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -18,6 +18,8 @@ tiles:
   zoom-until: <%= node[:tilequeue][:tiles][:zoom_until] %>
   daemon: true
   expired: <%= node[:tilequeue][:tiles][:expired] %>
+workers: <%= node[:tilequeue][:workers] %>
+messages_at_once: <%= node[:tilequeue][:messages_at_once] %>
 tilestache:
   config: <%= node[:tilequeue][:tilestache][:config] %>
   formats: <%= node[:tilequeue][:tilestache][:formats] %>
