--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -13,6 +13,10 @@ tiles:
   metro-extract:
     url: https://raw.githubusercontent.com/mapzen/metroextractor-cities/master/cities.json
     zoom-filter: <%= node[:tilequeue][:tiles][:metro_extract][:zoom_filter] %>
+  top-tiles:
+    url: https://gist.github.com/brunosan/b7ce3df8b48229a61b5b/raw/37e42e77f253bc204076111c92acc4d5e653edd2/top_50k_tiles.csv
+    zoom-start: <%= node[:tilequeue][:tiles][:top_tiles][:zoom_start] %>
+    zoom-until: <%= node[:tilequeue][:tiles][:top_tiles][:zoom_until] %>
   unique: true
   zoom-start: <%= node[:tilequeue][:tiles][:zoom_start] %>
   zoom-until: <%= node[:tilequeue][:tiles][:zoom_until] %>
