--- a/templates/default/tilequeue-logging.conf.erb
+++ b/templates/default/tilequeue-logging.conf.erb
@@ -19,7 +19,7 @@ propagate=0
 
 [logger_seed]
 level=INFO
-handlers=consoleHandler
+handlers=consoleTimestampHandler
 qualName=seed
 propagate=0
 
@@ -31,7 +31,7 @@ propagate=0
 
 [logger_drain]
 level=INFO
-handlers=consoleHandler
+handlers=consoleTimestampHandler
 qualName=drain
 propagate=0
 
