--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -22,8 +22,10 @@ tiles:
   zoom-until: <%= node[:tilequeue][:tiles][:zoom_until] %>
   daemon: true
   expired-location: <%= node[:tilequeue][:tiles][:expired_location] %>
-workers: <%= node[:tilequeue][:workers] %>
-messages_at_once: <%= node[:tilequeue][:messages_at_once] %>
+process:
+  n-simultaneous-query-sets: <%= node[:tilequeue][:process][:n_simultaneous_query_sets] %>
+  log-queue-sizes: <%= node[:tilequeue][:process][:log_queue_sizes] %>
+  log-queue-sizes-interval-seconds: <%= node[:tilequeue][:process][:log_queue_sizes_seconds] %>
 tilestache:
   config: <%= node[:tilequeue][:tilestache][:config] %>
   formats: <%= node[:tilequeue][:tilestache][:formats] %>
