Add config to support seeding at low zooms

--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -15,13 +15,14 @@ tiles:
       zoom-start: <%= node[:tilequeue][:tiles][:all][:zoom_start] %>
       zoom-until: <%= node[:tilequeue][:tiles][:all][:zoom_until] %>
     metro-extract:
-      url: https://raw.githubusercontent.com/mapzen/metroextractor-cities/master/cities.json
+      url: <%= node[:tilequeue][:tiles][:metro_extract][:url] %>
       zoom-start: <%= node[:tilequeue][:tiles][:metro_extract][:zoom_start] %>
       zoom-until: <%= node[:tilequeue][:tiles][:metro_extract][:zoom_until] %>
     top-tiles:
-      url: https://gist.github.com/brunosan/b7ce3df8b48229a61b5b/raw/37e42e77f253bc204076111c92acc4d5e653edd2/top_50k_tiles.csv
+      url: <%= node[:tilequeue][:tiles][:top_tiles][:url] %>
       zoom-start: <%= node[:tilequeue][:tiles][:top_tiles][:zoom_start] %>
       zoom-until: <%= node[:tilequeue][:tiles][:top_tiles][:zoom_until] %>
+    should-add-to-tiles-of-interest: <%= node[:tilequeue][:tiles][:should_add_to_tiles_of_interest] %>
   intersect:
     expired-location: <%= node[:tilequeue][:tiles][:expired_location] %>
     parent-zoom-until: <%= node[:tilequeue][:tiles][:parent_zoom_until] %>
