Configure toi enqueue to use timestamp handler

--- a/templates/default/tilequeue-logging.conf.erb
+++ b/templates/default/tilequeue-logging.conf.erb
@@ -13,7 +13,7 @@ handlers=consoleHandler
 
 [logger_enqueue_tiles_of_interest]
 level=INFO
-handlers=consoleHandler
+handlers=consoleTimestampHandler
 qualName=enqueue_tiles_of_interest
 propagate=0
 
