--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -61,7 +61,10 @@ postgresql:
   user: <%= node[:tilequeue][:postgresql][:user] %>
   password: <%= node[:tilequeue][:postgresql][:password] %>
 wof:
-  neighbourhoods_url: https://github.com/whosonfirst/whosonfirst-data/blob/master/meta/wof-neighbourhood-latest.csv?raw=true
+  neighbourhoods-meta-url: node[:tilequeue][:wof][:meta_url][:neighbourhoods]
+  microhoods-meta-url: node[:tilequeue][:wof][:meta_url][:microhoods]
+  macrohoods-meta-url: node[:tilequeue][:wof][:meta_url][:macrohoods]
+  data-prefix-url: node[:tilequeue][:wof][:data_prefix_url]
   postgresql:
     host: <%= node[:tilequeue][:wof][:postgresql][:host] %>
     port: 5432
