Configure wof boroughs meta url

--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -74,6 +74,7 @@ wof:
   neighbourhoods-meta-url: <%= node[:tilequeue][:wof][:meta_url][:neighbourhoods] %>
   microhoods-meta-url: <%= node[:tilequeue][:wof][:meta_url][:microhoods] %>
   macrohoods-meta-url: <%= node[:tilequeue][:wof][:meta_url][:macrohoods] %>
+  boroughs-meta-url: <%= node[:tilequeue][:wof][:meta_url][:boroughs] %>
   data-prefix-url: <%= node[:tilequeue][:wof][:data_prefix_url] %>
   max-retries: <%= node[:tilequeue][:wof][:max_retries] %>
   postgresql:
