--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -57,6 +57,27 @@ process:
       zoom-until: <%= layer_to_format[:zoom_until] %>
 <%- end -%>
 <%- end -%>
+<%- if node[:tilequeue][:process][:buffer] -%>
+  buffer:
+  <%- node[:tilequeue][:process][:buffer].each do |fmt_ext, fmt_data| -%>
+    <%= fmt_ext %>:
+      <%- if fmt_data['layer'] -%>
+      layer:
+      <%- fmt_data['layer'].each do |layer_name, layer_data| -%>
+        <%= layer_name %>:
+          <%- layer_data.each do |geom_type, value| -%>
+          <%= geom_type %>: <%= value %>
+          <%- end -%>
+      <%- end -%>
+      <%- end -%>
+      <%- if fmt_data['geometry'] -%>
+      geometry:
+        <%- fmt_data['geometry'].each do |geom_type, value| -%>
+        <%= geom_type %>: <%= value %>
+        <%- end -%>
+      <%- end -%>
+  <%- end -%>
+<%- end -%>
 logging:
   config: <%= node[:tilequeue][:logging][:config] %>
 redis:
