--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -1,6 +1,12 @@
 queue:
   type: <%= node[:tilequeue][:queue][:type] %>
   name: <%= node[:tilequeue][:queue][:name] %>
+  <%- if node[:tilequeue][:queue][:zoom_queue_map] -%>
+  zoom-queue-map:
+    <%- node[:tilequeue][:queue][:zoom_queue_map].each do |zoom_range, queue_name| -%>
+    <%= zoom_range %>: <%= queue_name %>
+    <%- end -%>
+  <%- end -%>
 store:
   type: <%= node[:tilequeue][:store][:type] %>
   name: <%= node[:tilequeue][:store][:name] %>
