Add skeleton for statsd configuration

--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -131,3 +131,9 @@ toi-prune:
     <%- end -%>
 <%- end -%>
 <%- end -%>
+<%- if node[:tilequeue][:statsd][:enabled] -%>
+statsd:
+  host: <%= node[:tilequeue][:statsd][:host] %>
+  port: <%= node[:tilequeue][:statsd][:port] %>
+  prefix: <%= node[:tilequeue][:statsd][:prefix] %>
+<%- end -%>
