--- a/templates/default/tilequeue-logging.conf.erb
+++ b/templates/default/tilequeue-logging.conf.erb
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,process,seed,intersect,drain,prune_tiles_of_interest,enqueue_tiles_of_interest,wof_process_neighbourhoods
+keys=root,process,seed,drain,prune_tiles_of_interest,enqueue_tiles_of_interest,wof_process_neighbourhoods,rawr_enqueue,rawr_process
 
 [handlers]
 keys=consoleHandler,consoleTimestampHandler
@@ -35,12 +35,6 @@ handlers=consoleTimestampHandler
 qualName=seed
 propagate=0
 
-[logger_intersect]
-level=INFO
-handlers=consoleTimestampHandler
-qualName=intersect
-propagate=0
-
 [logger_drain]
 level=INFO
 handlers=consoleTimestampHandler
@@ -51,6 +45,18 @@ propagate=0
 level=INFO
 handlers=consoleTimestampHandler
 qualName=wof_process_neighbourhoods
+propagate=0
+
+[logger_rawr_enqueue]
+level=INFO
+handlers=consoleHandler
+qualName=rawr_enqueue
+propagate=0
+
+[logger_rawr_process]
+level=INFO
+handlers=consoleHandler
+qualName=rawr_process
 propagate=0
 
 [handler_consoleHandler]
