Remove unused drain logger

--- a/templates/default/tilequeue-logging.conf.erb
+++ b/templates/default/tilequeue-logging.conf.erb
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,process,seed,drain,prune_tiles_of_interest,enqueue_tiles_of_interest,wof_process_neighbourhoods,rawr_enqueue,rawr_process,rawr_seed
+keys=root,process,seed,prune_tiles_of_interest,enqueue_tiles_of_interest,wof_process_neighbourhoods,rawr_enqueue,rawr_process,rawr_seed
 
 [handlers]
 keys=consoleHandler,consoleTimestampHandler,jsonConsoleHandler
