Configure rawr intersect type

--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -200,4 +200,6 @@ rawr:
       region: <%= node[:tilequeue][:rawr][:source][:region] %>
       prefix: <%= node[:tilequeue][:rawr][:source][:prefix] %>
       suffix: <%= node[:tilequeue][:rawr][:source][:suffix] %>
+  intersect:
+    type: <%= node[:tilequeue][:rawr][:intersect][:type] %>
 use-rawr-tiles: <%= node[:tilequeue][:rawr][:use_rawr_tiles] %>
