--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -200,6 +200,37 @@ rawr:
       region: <%= node[:tilequeue][:rawr][:source][:region] %>
       prefix: <%= node[:tilequeue][:rawr][:source][:prefix] %>
       suffix: <%= node[:tilequeue][:rawr][:source][:suffix] %>
+  # when a feature's shape is of the type given in the key and the feature
+  # appears in the listed layers, then generate a label centroid. multi*
+  # geometries are considered the same as single ones for the purposes of key
+  # lookup.
+  label-placement-layers:
+    point: ['earth', 'water']
+    polygon: ['buildings', 'earth', 'landuse', 'water']
+    linestring: ['earth', 'landuse', 'water']
+  # indexes to generate on the RAWR tile. features are looked up only if they
+  # appear in an index, so this list must be exhaustive. all OSM-based features
+  # are handled by a single index of {type: osm}. other indexes are provided on
+  # single table/layer combinations with the {type: simple}, providing the
+  # names of both the table and layer. it's also possible to provide start_zoom
+  # and end_zoom parameters which control when the data is visible. note that
+  # the start_zoom is inclusive (and optional; defaults to 0) and the end_zoom
+  # is exclusive (also optional; defaults to infinity).
+  indexes:
+    - type: osm
+    - type: simple
+      table: wof_neighbourhood
+      layer: places
+    - type: simple
+      table: water_polygons
+      layer: water
+    - type: simple
+      table: land_polygons
+      layer: earth
+    - type: simple
+      table: ne_10m_urban_areas
+      layer: landuse
+      end_zoom: 10
   intersect:
     type: <%= node[:tilequeue][:rawr][:intersect][:type] %>
 use-rawr-tiles: <%= node[:tilequeue][:rawr][:use_rawr_tiles] %>
