--- a/templates/default/tilequeue-config.yaml.erb
+++ b/templates/default/tilequeue-config.yaml.erb
@@ -198,6 +198,7 @@ rawr:
       wof_neighbourhood: { name: wof, value: whosonfirst.mapzen.com }
       water_polygons: &osmdata { name: shp, value: openstreetmapdata.com }
       land_polygons: *osmdata
+      ne_10m_urban_areas: { name: ne, value: naturalearthdata.com }
     s3:
       bucket: <%= node[:tilequeue][:rawr][:source][:bucket] %>
       region: <%= node[:tilequeue][:rawr][:source][:region] %>
